--- a/src/pages/formularios/tarea.html
+++ b/src/pages/formularios/tarea.html
@@ -51,7 +51,7 @@
     </ion-item>
 
     <div padding>
-      <button ion-button color="secondary" style="border: 1px green solid;" block type="submit">GUARDAR</button>
+      <button ion-button color="pesto-light" style="border: 1px green" block type="submit">GUARDAR</button>
     </div>
 
   </form>
