--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -74,8 +74,9 @@
         </p>
       </button>
     </ion-card>
-<!--
-    <ion-card>
+
+    
+    <ion-card *ngIf="promotor">
       <button ion-item text-wrap (click)="casoespecial()">
         <ion-thumbnail item-start>
           <img src="assets/imgs/especial.png">
@@ -86,10 +87,9 @@
         </p>
       </button>
     </ion-card>
-  -->
 
   </ion-list>
-
+<button (click)="cmabiarestado">cambiar estado</button>
   <!--  
 <button   ion-button color="secondary" style="border: 1px green solid;" block (click)="galeria()">galeria</button>
         <button   ion-button color="secondary" style="border: 1px green solid;" block (click)="getPicture()">getPicture</button>
