--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -89,7 +89,7 @@
     </ion-card>
 
   </ion-list>
-<button (click)="cmabiarestado">cambiar estado</button>
+<!-- <button ion-button block (click)="cmabiarestado()">cambiar estado</button> -->
   <!--  
 <button   ion-button color="secondary" style="border: 1px green solid;" block (click)="galeria()">galeria</button>
         <button   ion-button color="secondary" style="border: 1px green solid;" block (click)="getPicture()">getPicture</button>
