--- a/src/pages/home/sinc.html
+++ b/src/pages/home/sinc.html
@@ -56,6 +56,6 @@
 
 </div>
 <div padding *ngIf="habilitarenvio">
-    <button ion-button color="pesto-light" style="border: 1px green solid;" block (click)="enviartodo()">Enviar</button>
+    <button ion-button color="pesto-light" style="border: 1px green solid;" block (click)="login()">Enviar</button>
   </div>
      </ion-content>
