--- a/src/pages/casoespecial/casoespecial.html
+++ b/src/pages/casoespecial/casoespecial.html
@@ -213,7 +213,7 @@
     
     </div>
     <div padding *ngIf="habilitarenvio">
-        <button ion-button color="pesto-light" style="border: 1px green solid;" block (click)="enviartodo()">Enviar</button>
+        <button ion-button color="pesto-light" style="border: 1px green solid;" block (click)="login()">Enviar</button>
       </div>
 
   </div>
