--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -64,7 +64,7 @@
     </ion-card>
 
     <ion-card>
-      <button ion-item text-wrap (click)="openPage(5)">
+      <button ion-item text-wrap (click)="descargardatos()">
         <ion-thumbnail item-start>
           <img src="assets/imgs/sinc.png">
         </ion-thumbnail>
@@ -89,10 +89,6 @@
     </ion-card>
 
   </ion-list>
-<!-- <button ion-button block (click)="cmabiarestado()">cambiar estado</button> -->
-  <!--  
-<button   ion-button color="secondary" style="border: 1px green solid;" block (click)="galeria()">galeria</button>
-        <button   ion-button color="secondary" style="border: 1px green solid;" block (click)="getPicture()">getPicture</button>
-              -->
+
 
 </ion-content>
