--- a/src/pages/unidadproductiva/unidadproductiva.html
+++ b/src/pages/unidadproductiva/unidadproductiva.html
@@ -44,7 +44,7 @@
                       <ion-icon name="clipboard"></ion-icon>
                       Formulario
                     </button>
-                    <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                    <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                       <ion-icon name="eye"></ion-icon>
                       Detalles
                     </button>
@@ -74,7 +74,7 @@
                   <ion-icon name="clipboard"></ion-icon>
                   Formulario
                 </button>
-                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                   <ion-icon name="eye"></ion-icon>
                   Detalles
                 </button>
@@ -103,7 +103,7 @@
                   <ion-icon name="clipboard"></ion-icon>
                   Formulario
                 </button>
-                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                   <ion-icon name="eye"></ion-icon>
                   Detalles
                 </button>
@@ -153,7 +153,7 @@
                   <ion-icon name="clipboard"></ion-icon>
                   Formulario
                 </button>
-                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                   <ion-icon name="eye"></ion-icon>
                   Detalles
                 </button>
@@ -184,7 +184,7 @@
                 <ion-icon name="clipboard"></ion-icon>
                 Formulario
               </button>
-              <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+              <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                 <ion-icon name="eye"></ion-icon>
                 Detalles
               </button>
@@ -213,7 +213,7 @@
                 <ion-icon name="clipboard"></ion-icon>
                 Formulario
               </button>
-              <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+              <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                 <ion-icon name="eye"></ion-icon>
                 Detalles
               </button>
