--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,9 +19,9 @@
         <ion-thumbnail item-start>
           <img src="assets/imgs/forms.png">
         </ion-thumbnail>
-        <h2 style="font-weight:bold">Formularios de auditoria</h2>
+        <h2 style="font-weight:bold">Formularios de Auditoría</h2>
         <p color="pesto-secondary-text">
-          Ingrese para diligencias los formularios de auditoria
+          Ingrese para diligenciar los formularios de auditoría.
         </p>
       </button>
     </ion-card>
@@ -31,9 +31,9 @@
         <ion-thumbnail item-start>
           <img src="assets/imgs/foms2.png">
         </ion-thumbnail>
-        <h2 style="font-weight:bold">Formulario de promotoria</h2>
+        <h2 style="font-weight:bold">Formulario de Promotoria</h2>
         <p color="pesto-secondary-text">
-          Ingrese para realizar el diligenciamiento del formulario de promotoria
+          Ingrese para realizar el diligenciamiento del formulario de promotoría.
         </p>
       </button>
     </ion-card>
@@ -46,7 +46,7 @@
         <h2 style="font-weight:bold">Unidades productivas asignadas</h2>
         <p color="pesto-secondary-text">
 
-          Unidades productivas con sus respectivos detalles
+          Unidades productivas con sus respectivos detalles.
         </p>
       </button>
     </ion-card>
@@ -57,8 +57,7 @@
         </ion-thumbnail>
         <h2 style="font-weight:bold">Enviar Formularios</h2>
         <p color="pesto-secondary-text">
-
-          Envio de formularios diligenciados
+          Envió de formularios diligenciados
         </p>
       </button>
     </ion-card>
@@ -68,7 +67,7 @@
         <ion-thumbnail item-start>
           <img src="assets/imgs/sinc.png">
         </ion-thumbnail>
-        <h2 style="font-weight:bold">Descarcar Formularios</h2>
+        <h2 style="font-weight:bold">Descargar Formularios</h2>
         <p color="pesto-secondary-text">
           Elimina datos existentes y recargar sistema.
         </p>
@@ -83,7 +82,7 @@
         </ion-thumbnail>
         <h2 style="font-weight:bold">Casos Especiales</h2>
         <p>
-          Crear una unidad productiva, ññenar sus formularios ...
+          Crear una unidad productiva y llenar sus formularios.
         </p>
       </button>
     </ion-card>
