--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,7 +41,7 @@
  
 
       <div padding *ngIf="!msj">
-        <button ion-button  color="pesto-dark" block type="submit" [disabled]="!form.valid">Entrar</button>
+        <button ion-button  color="pesto-dark" block type="submit" [disabled]="!form.valid">Iniciar Sesion</button>
       </div>
      
     </ion-list>
