--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -10,7 +10,7 @@
 <ion-content >
 
     <ion-item-group>
-        <ion-item-divider color="light">Informacion Personal</ion-item-divider>
+        <ion-item-divider color="light">Información Personal</ion-item-divider>
 
         <ion-item>
             <h2>Usuario</h2>
@@ -33,7 +33,7 @@
         </ion-item>
 
         <ion-item>
-            <h2>Tipo de identificacion</h2>
+            <h2>Tipo de identificación</h2>
             <p>{{tipo_id}}</p>
         </ion-item>
         <ion-item>
