--- a/src/pages/unidadproductiva/unidadproductiva.html
+++ b/src/pages/unidadproductiva/unidadproductiva.html
@@ -16,7 +16,7 @@
       <ion-thumbnail item-start>
         <img src="assets/imgs/finca.png">
       </ion-thumbnail>
-<h2>Unidades para promotoria</h2>
+<h2>Unidades para promotoría</h2>
     </ion-list-header>
 
     <ion-list>
@@ -123,7 +123,7 @@
                 <img src="assets/imgs/finca.png">
               </ion-thumbnail>
  <h2>
-    Unidades para Auditoria
+    Unidades para Auditoría
  </h2>
           </ion-list-header>
       <ion-list>
