--- a/src/pages/casoespecial/casoespecial.html
+++ b/src/pages/casoespecial/casoespecial.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="pesto-primary">
-    <ion-title>Casos especiales</ion-title>
+    <ion-title>Casos Especiales</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -23,12 +23,12 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>Identificacion</ion-label>
+        <ion-label floating>Identificación</ion-label>
         <ion-input type="number" name='identificacion' ngModel required #identificacion="ngModel" [class.invalid]="identificacion.errors && identificacion.dirty"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label floating>Telefono</ion-label>
+        <ion-label floating>Teléfono</ion-label>
         <ion-input type="number" name='telefono' ngModel required #telefono="ngModel" [class.invalid]="telefono.errors && telefono.dirty"></ion-input>
       </ion-item>
 
@@ -39,7 +39,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>Grupo Etnico</ion-label>
+        <ion-label floating>Grupo Étnico</ion-label>
         <ion-input type="text" name='grupoe' ngModel required #grupoe="ngModel" [class.invalid]="grupoe.errors && grupoe.dirty"></ion-input>
       </ion-item>
 
@@ -58,7 +58,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label>Region</ion-label>
+        <ion-label>Región</ion-label>
         <ion-select name="region" okText="Seleccionar" cancelText="Cancelar" ngModel required #region="ngModel" [class.invalid]="region.errors && region.dirty">
           <ion-option *ngFor="let region of regiones" [value]="region.id">{{region.nombre}}</ion-option>
         </ion-select>
@@ -108,7 +108,7 @@
                   <ion-icon name="clipboard"></ion-icon>
                   Formulario
                 </button>
-                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                   <ion-icon name="eye"></ion-icon>
                   Detalles
                 </button>
@@ -138,7 +138,7 @@
                   <ion-icon name="clipboard"></ion-icon>
                   Formulario
                 </button>
-                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                   <ion-icon name="eye"></ion-icon>
                   Detalles
                 </button>
@@ -167,7 +167,7 @@
                   <ion-icon name="clipboard"></ion-icon>
                   Formulario
                 </button>
-                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="pesto-primary">
+                <button ion-button (click)="abrirdetalles(item)" color="pesto-primary">
                   <ion-icon name="eye"></ion-icon>
                   Detalles
                 </button>
@@ -177,7 +177,7 @@
 
         </div>
 
-      </div>
+      </div> 
     </ion-list>
     <div *ngIf="items.length > 0">
       <div padding>
@@ -192,7 +192,7 @@
   <div *ngIf="caso == 3">
     <ion-item>
       <ion-label>Unidades iniciadas</ion-label>
-      <ion-select multiple (ionChange)="comprobarunidades(1001,$event)">
+      <ion-select multiple (ionChange)="comprobarunidades(tipopromotoria,$event)"  okText="Seleccionar" cancelText="Cancelar">
         <div *ngFor="let item of items">
           <ion-option [value]="item">{{item.nombre}}</ion-option>
         </div>
@@ -202,7 +202,7 @@
 
     <div *ngIf="!habilitarenvio">
         <ion-item no-lines>
-            <label>Pregunta sin responder </label>
+            <label>Preguntas sin responder </label>
             </ion-item>
       <ion-item *ngFor="let pregunta of preguntassinresponder" text-wrap (click)="abrirpagina(pregunta)">
           <h2>{{pregunta.preguntaid.enunciado}}</h2>
