--- a/src/pages/updetalles/updetalles.html
+++ b/src/pages/updetalles/updetalles.html
@@ -15,7 +15,7 @@
 
     <ion-item-group *ngFor="let data of detalles">
 
-        <ion-item-divider color="light">Informacion</ion-item-divider>
+        <ion-item-divider color="light">Información</ion-item-divider>
         <ion-item>
             <h2>ID</h2>
             <p>{{data.idUnidadProductiva}}</p>
@@ -29,7 +29,7 @@
             <p>{{data.fechaIngreso}}</p>
         </ion-item>
         <ion-item>
-            <h2>Localizacion</h2>
+            <h2>Localización</h2>
             <ion-row>
                 <ion-col col-6>
                     <p>Longitud : {{data.localizacion_longitude}}</p>
@@ -55,7 +55,7 @@
                 <ion-icon name="checkbox" style="color:mediumseagreen" item-end></ion-icon> Unidad productiva terminada</p>
         </ion-item>
         <ion-item *ngIf="data.terminado > 0">
-            <h2>Localizacion y fecha de inicio</h2>
+            <h2>Localización y fecha de inicio</h2>
             <ion-row>
                 <ion-col col-4>
                     <p>Hora : {{data.fechainicio}}</p>
@@ -70,7 +70,7 @@
             </ion-row>
         </ion-item>
         <ion-item *ngIf="data.terminado > 0">
-            <h2>Localizacion y fecha de finalizacion</h2>
+            <h2>Localización y fecha de finalizacion</h2>
             <ion-row>
                 <ion-col col-4>
                     <p>Hora : {{data.fechafin}}</p>
@@ -94,17 +94,17 @@
             </p>
 
         </ion-item>
-        <ion-item-divider color="light">Informacion Productor</ion-item-divider>
+        <ion-item-divider color="light">Información Productor</ion-item-divider>
         <ion-item>
             <h2>Nombre</h2>
             <p> {{data.productornombre}}</p>
         </ion-item>
         <ion-item>
-            <h2>Identificacion</h2>
+            <h2>Identificación</h2>
             <p> {{data.identificacion}}</p>
         </ion-item>
         <ion-item>
-            <h2>Telefono</h2>
+            <h2>Teléfono</h2>
             <p> {{data.telefono}}</p>
         </ion-item>
         <ion-item>
@@ -112,14 +112,14 @@
             <p> {{data.annoIngreso}}</p>
         </ion-item>
         <ion-item>
-            <h2>Ultima aplicacion</h2>
+            <h2>Ultima aplicación</h2>
             <p>{{data.ultimaAplicacion}}</p>
         </ion-item>
 
 
-        <ion-item-divider color="light">Informacion Region</ion-item-divider>
+        <ion-item-divider color="light">Información Region</ion-item-divider>
         <ion-item>
-            <h2>Region</h2>
+            <h2>Región</h2>
             <p> {{reg}} </p>
         </ion-item>
         <ion-item>
@@ -131,7 +131,7 @@
             <p>{{departamento}}</p>
         </ion-item>
         <ion-item>
-            <h2>Pais</h2>
+            <h2>País</h2>
             <p>{{pais}} </p>
         </ion-item>
 
